sfdx-source/force-app/main/default/objects/Account/fields/MQOS_Outreach__c.field-meta.xml
<CustomField>
    <fullName>MQOS_Outreach__c</fullName>
    <description>LEM-14107: It is used to store the engagement preference for MQOS Outreach.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>MQOS Outreach</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Contact - Sensitive Relationship</fullName>
            </value>
            <value>
                <fullName>High/Include - Very Interested</fullName>
            </value>
            <value>
                <fullName>Low/Exclude - Not Interested</fullName>
            </value>
            <value>
                <fullName>Medium/Potential - Could be Interested</fullName>
            </value>
            <value>
                <fullName>Opt in for MQOS Central Coms</fullName>
            </value>
            <value>
                <fullName>SMs Handles MQOS Comms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>