sfdx-source/force-app/main/default/objects/Account/fields/Mx_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Mx_Contact_Status__c</fullName>
    <description>LEM-14107: It is used to store the merchant contact status.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Mx Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can Contact - Require Final Vetting</fullName>
            </value>
            <value>
                <fullName>Can Contact - SM Will Review Before Outreach</fullName>
            </value>
            <value>
                <fullName>Do Not Contact - Sensitive Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>