sfdx-source/force-app/main/default/objects/Account/fields/Mx_DB_ID__c.field-meta.xml
<CustomField>
    <fullName>Mx_DB_ID__c</fullName>
    <description>LEM-17064: used by Vx team for identifying ENT Fz.</description>
    <label>Mx DB ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>