sfdx-source/force-app/main/default/objects/Account/fields/Mx_Interest_in_Co_Funded_Marketing_Ops__c.field-meta.xml
<CustomField>
    <fullName>Mx_Interest_in_Co_Funded_Marketing_Ops__c</fullName>
    <description>LEM-14107: It is used to store the engagement preference for Co-Funded Marketing Ops.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Mx Interest in Co-Funded Marketing Ops</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Contact - Sensitive Relationship</fullName>
            </value>
            <value>
                <fullName>High/Include - Very Interested</fullName>
            </value>
            <value>
                <fullName>Low/Exclude - Not Interested</fullName>
            </value>
            <value>
                <fullName>Medium/Potential - Could be Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>