sfdx-source/force-app/main/default/objects/Account/fields/Mx_Management_Requested__c.field-meta.xml
<CustomField>
    <fullName>Mx_Management_Requested__c</fullName>
    <description>LEM-14107: It is used to store the engagement preference for the Mx.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Mx Management Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive Relationship - Keep in my book of business</fullName>
            </value>
            <value>
                <fullName>Negative Relationship - Mx unresponsive / drop from management</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>