sfdx-source/force-app/main/default/objects/Account/fields/Mx_Onboarding_Link_Id__c.field-meta.xml
<CustomField>
    <fullName>Mx_Onboarding_Link_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15113: It stores the Id of the Mx Onboarding Link record which triggered the Account creation or update.</description>
    <label>Mx Onboarding Link Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>