sfdx-source/force-app/main/default/objects/Account/fields/Mx_Tag_Associations_Concatenated__c.field-meta.xml
<CustomField>
    <fullName>Mx_Tag_Associations_Concatenated__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-25211: It stores the concatenated Mx Tag Names related to this Account.</description>
    <inlineHelpText>Includes all active Mx Tag Associations against this particular account.</inlineHelpText>
    <label>Mx Tag Associations - Concatenated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>