sfdx-source/force-app/main/default/objects/Account/fields/Name_With_Address__c.field-meta.xml
<CustomField>
    <fullName>Name_With_Address__c</fullName>
    <description>LEM-5503: It used to store account name with address</description>
    <formula>Name &amp; &quot;&quot; &amp; &quot;-&quot; &amp; Account_Address__c</formula>
    <label>Name With Address</label>
    <type>Text</type>
</CustomField>