sfdx-source/force-app/main/default/objects/Account/fields/NDA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Expiration_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM:1039: Captures the expiry date of the Agreement with the Merchant</description>
    <inlineHelpText>Indicates the date the NDA expires.</inlineHelpText>
    <label>NDA Expiration Date</label>
    <type>Date</type>
</CustomField>