sfdx-source/force-app/main/default/objects/Account/fields/NDA_Status__c.field-meta.xml
<CustomField>
    <fullName>NDA_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1039: NDA Status to track the current status of the Merchant Agreement</description>
    <inlineHelpText>Indicates the current status of NDA.</inlineHelpText>
    <label>NDA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>