sfdx-source/force-app/main/default/objects/Account/fields/Needs_Evening_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Needs_Evening_Delivery__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates if Mx has late opening hours, evening delivery of the tablet is required.</description>
    <inlineHelpText>If Mx has late opening hours, evening delivery of the tablet is required</inlineHelpText>
    <label>Needs Evening Delivery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>