sfdx-source/force-app/main/default/objects/Account/fields/Nintex_Mx_Requested_Photoshoot__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Mx_Requested_Photoshoot__c</fullName>
    <description>LEM-15779: It is used to capture if Mx has requested Photoshoot or not on Nintex SSMO form submission.</description>
    <label>RequestedPhotoshoot (ReservedforNintex)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>