sfdx-source/force-app/main/default/objects/Account/fields/Nintex_Photoshoot_Date__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Photoshoot_Date__c</fullName>
    <description>LEM-15779: It is used to capture the date of the photoshoot on Nintex SSMO form submission.</description>
    <label>PhotoshootDate (ReservedforNintex)</label>
    <type>Date</type>
</CustomField>