sfdx-source/force-app/main/default/objects/Account/fields/Nintex_Photoshoot_Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Photoshoot_Text_Value__c</fullName>
    <description>LEM-15246: This field is only meant for storing the datetime value coming from nintex temporarily in YYYY-MM-DD hh:mm:ss format and to populate actual photoshoot time field using trigger</description>
    <label>Nintex Photoshoot Text Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>