sfdx-source/force-app/main/default/objects/Account/fields/Nintex_Photoshoot_Time__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Photoshoot_Time__c</fullName>
    <description>LEM-15779: It is used to capture the time of the photoshoot on Nintex SSMO form submission.</description>
    <label>PhotoshootTime (ReservedforNintex)</label>
    <type>Time</type>
</CustomField>