sfdx-source/force-app/main/default/objects/Account/fields/Nintex_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Nintex_Signed_Date__c</fullName>
    <description>LEM-10766: Captures the Date on which Nintex Form was signed.</description>
    <label>Nintex Signed Date</label>
    <type>DateTime</type>
</CustomField>