sfdx-source/force-app/main/default/objects/Account/fields/Number_of_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Call_Attempts__c</fullName>
    <label>Number of Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>