sfdx-source/force-app/main/default/objects/Account/fields/Number_of_Days_to_Opt_out__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_to_Opt_out__c</fullName>
    <description>LEM-9550: It captures the number of days remaining for Mx to Opt-out for Payment Method switch.</description>
    <formula>/*The date value captures the first month of the year 1900. To keep the business days calculation consistent to include only weekdays i.e. 5 days a week, a value DATE(1900, 1, 8) is used to find the correct difference between the given dates*/
IF(
   ISBLANK(Withholding_Opt_out_Expiry_Date__c), &apos;&apos;,
   IF(
      Withholding_Opt_out_Expiry_Date__c &gt;= TODAY(),
      TEXT(
        FLOOR(
          (5 * FLOOR((Withholding_Opt_out_Expiry_Date__c - DATE(1900, 1, 8)) / 7)
          +
          MIN(5, MOD(Withholding_Opt_out_Expiry_Date__c - DATE(1900, 1, 8), 7))
          )
          -
          (5 * FLOOR((TODAY() - DATE(1900, 1, 8)) / 7)
          +
          MIN(5, MOD(TODAY() - DATE(1900, 1, 8), 7))
          )
        )
      ),
    &apos;0&apos;
    )
)</formula>
    <inlineHelpText>This field indicates the number of days remaining for Mx to Opt-out for Payment Method switch</inlineHelpText>
    <label>Number of Days to Opt-out</label>
    <type>Text</type>
</CustomField>