sfdx-source/force-app/main/default/objects/Account/fields/NumberOfMxStoresNotonDoorDashCalculate__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMxStoresNotonDoorDashCalculate__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>0</defaultValue>
    <description>LEM-16306: It stores count of Mx Stores not on DoorDash for the Business.</description>
    <label>Number of Mx Stores not on DoorDash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>