sfdx-source/force-app/main/default/objects/Account/fields/Offers_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Offers_Pickup__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates if Mx accepts pickup orders.</description>
    <inlineHelpText>Indicates if Mx accepts pickup orders</inlineHelpText>
    <label>Offers Pickup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>