sfdx-source/force-app/main/default/objects/Account/fields/Opt_out_Nintex_Email__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_Nintex_Email__c</fullName>
    <description>LEM-10597: It stores email submitted by Mx through Nintex &apos;Withholding Opt-out&apos; form.</description>
    <label>Opt-out Nintex Email</label>
    <type>Email</type>
</CustomField>