sfdx-source/force-app/main/default/objects/Account/fields/Order_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Order_Barcode__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates order barcode.</description>
    <label>Order Barcode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>