sfdx-source/force-app/main/default/objects/Account/fields/Order_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Order protocol defined for the Mxs being onboarded</description>
    <inlineHelpText>Signifies the type of order protocol requested for the Mx store</inlineHelpText>
    <label>Order Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 Tablets (Caviar and DoorDash Own)</fullName>
            </value>
            <value>
                <fullName>Android Tablet (Merchant Owns)</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>POS (Caviar Owns)</fullName>
            </value>
            <value>
                <fullName>POS and 2 Tablets (Caviar POS, DoorDash and Caviar Tablets)</fullName>
            </value>
            <value>
                <fullName>POS and 2 Tablets (DoorDash POS, DoorDash and Caviar Tablets)</fullName>
            </value>
            <value>
                <fullName>POS and Tablet (Caviar Owns)</fullName>
            </value>
            <value>
                <fullName>POS and Tablet (DoorDash Owns)</fullName>
            </value>
            <value>
                <fullName>POS and Tablet (Merchant Owns)</fullName>
            </value>
            <value>
                <fullName>POS and Tablet Return Label</fullName>
            </value>
            <value>
                <fullName>Tablet (Caviar Owns)</fullName>
            </value>
            <value>
                <fullName>Tablet (DoorDash Owns)</fullName>
            </value>
            <value>
                <fullName>Tablet and Printer (DoorDash Owns)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>