sfdx-source/force-app/main/default/objects/Account/fields/Order_Protocol_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol_Email__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Signifies the email to which orders will be sent to in case order protocol is email.</description>
    <inlineHelpText>Signifies the email to which orders will be sent to in case order protocol is email</inlineHelpText>
    <label>Order Protocol Email</label>
    <type>Email</type>
</CustomField>