sfdx-source/force-app/main/default/objects/Account/fields/Order_Protocol_Fax__c.field-meta.xml
<CustomField>
    <fullName>Order_Protocol_Fax__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Signifies the fax number to which orders will be sent in case order protocol is fax.</description>
    <inlineHelpText>Signifies the fax number to which orders will be sent in case order protocol is fax</inlineHelpText>
    <label>Order Protocol Fax</label>
    <type>Phone</type>
</CustomField>