sfdx-source/force-app/main/default/objects/Account/fields/Outreach_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Strategy__c</fullName>
    <description>LEM-14107: It is used to store the Outreach Strategy preference.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Outreach Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM Led</fullName>
                <label>Type A: AM Led</label>
            </value>
            <value>
                <fullName>AM and AD Co-Led</fullName>
                <label>Type B: AM and AD Co-Led</label>
            </value>
            <value>
                <fullName>AD Unblocked</fullName>
                <label>Type C: AD Unblocked</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>