sfdx-source/force-app/main/default/objects/Account/fields/Package_Override__c.field-meta.xml
<CustomField>
    <fullName>Package_Override__c</fullName>
    <description>LEM-1851</description>
    <label>Package Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Package_Pricing_Tiers</valueSetName>
    </valueSet>
</CustomField>