sfdx-source/force-app/main/default/objects/Account/fields/Parent_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Owner__c</fullName>
    <description>LEM-3547: It is used to display parent Account&apos;s Owner in the Account Details section of the onboarding details component.</description>
    <formula>HYPERLINK(&apos;/&apos; + Parent.OwnerId, Parent.Account_Owner__c, &apos;_blank&apos;)</formula>
    <inlineHelpText>Displays the Owner of the Account’s immediate Parent.</inlineHelpText>
    <label>Parent Account Owner</label>
    <type>Text</type>
</CustomField>