sfdx-source/force-app/main/default/objects/Account/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-3211: It indicates type of parent Account.</description>
    <formula>TEXT(Parent.Type)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Parent Type</label>
    <type>Text</type>
</CustomField>