sfdx-source/force-app/main/default/objects/Account/fields/Parking_Arrival_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Parking_Arrival_Instructions__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates parking or arrival instructions as the Dasher approaches the store.</description>
    <inlineHelpText>Please add any parking or arrival instructions as the Dasher approaches the store (e.g. parking tips, specific entrance, etc.)</inlineHelpText>
    <label>Parking / Arrival Instructions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>