sfdx-source/force-app/main/default/objects/Account/fields/Partnership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Expiration_Date__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15849: It displays the date when the Exclusivity contract with the Mx expires.</description>
    <inlineHelpText>Displays the date when the custom partnership with the Mx expires.</inlineHelpText>
    <label>Partnership Expiration Date</label>
    <type>Date</type>
</CustomField>