sfdx-source/force-app/main/default/objects/Account/fields/Partnership_Level__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Level__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13442: It indicates the level of partnership between DoorDash and the Mx.</description>
    <inlineHelpText>Indicates the level of partnership between DoorDash and the Mx</inlineHelpText>
    <label>Partnership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>