sfdx-source/force-app/main/default/objects/Account/fields/Partnership_Status__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-89: This field is used to know the partnership status of the account.</description>
    <label>Partnership Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospective Partner</fullName>
                <default>true</default>
                <label>Prospective Partner</label>
            </value>
            <value>
                <fullName>Existing Partner</fullName>
            </value>
            <value>
                <fullName>Former Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>