sfdx-source/force-app/main/default/objects/Account/fields/Payment_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Bank_Account__c</fullName>
    <description>LEM-3359: Represents the external account Id in payment services.</description>
    <label>Payment Bank Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>