sfdx-source/force-app/main/default/objects/Account/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>LEM-9497: It indicates the payment method of the franchise business.</description>
    <inlineHelpText>Indicates the payment method of the franchise business</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Protocol</valueSetName>
    </valueSet>
</CustomField>