sfdx-source/force-app/main/default/objects/Account/fields/Pilot_New_Initiatives_Interest__c.field-meta.xml
<CustomField>
    <fullName>Pilot_New_Initiatives_Interest__c</fullName>
    <description>LEM-14107: It is used to store the initiative interests for the engagement.</description>
    <complianceGroup>GDPR</complianceGroup>
    <label>Pilot/New Initiatives Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Contact - Sensitive Relationship</fullName>
            </value>
            <value>
                <fullName>High/Include - Very Interested</fullName>
            </value>
            <value>
                <fullName>Low/Exclude - Not Interested</fullName>
            </value>
            <value>
                <fullName>Medium/Potential - Could be Interested</fullName>
            </value>
            <value>
                <fullName>No - this Mx would not like to know about Pilots</fullName>
            </value>
            <value>
                <fullName>Yes - This Mx would like to know about pilots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>