sfdx-source/force-app/main/default/objects/Account/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Indicates the internal platform Mx stores are being onboarded on.</description>
    <inlineHelpText>Signifies the internal platform Mx stores are being onboarded on</inlineHelpText>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caviar</fullName>
            </value>
            <value>
                <fullName>DoorDash</fullName>
            </value>
            <value>
                <fullName>Caviar and DoorDash</fullName>
            </value>
            <value>
                <fullName>White Labeled</fullName>
            </value>
            <value>
                <fullName>Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>