sfdx-source/force-app/main/default/objects/Account/fields/POS_Fallback_Protocol__c.field-meta.xml
<CustomField>
    <fullName>POS_Fallback_Protocol__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-1048: Signifies the fallback option for POS.</description>
    <inlineHelpText>Signifies the fallback option for POS</inlineHelpText>
    <label>POS Fallback Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dasher Red Card</fullName>
            </value>
            <value>
                <fullName>OP Phone Call</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Dasher Place Direct Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>