sfdx-source/force-app/main/default/objects/Account/fields/POS_History_Report__c.field-meta.xml
<CustomField>
    <fullName>POS_History_Report__c</fullName>
    <description>LEM-4711: It stores link to &apos;Account POS Histories&apos; report. It is used for showing the link to report in onboarding details section.</description>
    <formula>HYPERLINK($CustomMetadata.Static_Configurations__mdt.Account_POS_Histories_Report_Link.Configuration_Value__c &amp; &apos;?fv0=&apos;  &amp; Account_ID18__c, $CustomMetadata.Static_Configurations__mdt.Account_POS_Histories_Report_Name.Configuration_Value__c)</formula>
    <label>POS History Report</label>
    <type>Text</type>
</CustomField>