sfdx-source/force-app/main/default/objects/Account/fields/POS_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>POS_Integration_Type__c</fullName>
    <description>LEM-1048: Signifies the live POS integrations.</description>
    <inlineHelpText>Signifies the live POS integrations</inlineHelpText>
    <label>POS Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>abacus_production</fullName>
            </value>
            <value>
                <fullName>adora</fullName>
            </value>
            <value>
                <fullName>albertsons</fullName>
            </value>
            <value>
                <fullName>albertsons_alcohol</fullName>
            </value>
            <value>
                <fullName>albertsons_deli</fullName>
            </value>
            <value>
                <fullName>albertsons_rapid</fullName>
            </value>
            <value>
                <fullName>aldelo</fullName>
            </value>
            <value>
                <fullName>aloha_odsp</fullName>
            </value>
            <value>
                <fullName>and_pizza</fullName>
            </value>
            <value>
                <fullName>ArrowPOS</fullName>
            </value>
            <value>
                <fullName>associated_food_stores</fullName>
            </value>
            <value>
                <fullName>atlantis_fresh_market_production</fullName>
            </value>
            <value>
                <fullName>bed_bath_beyond</fullName>
            </value>
            <value>
                <fullName>better_health_production</fullName>
            </value>
            <value>
                <fullName>bevmax_production</fullName>
            </value>
            <value>
                <fullName>bevmo</fullName>
            </value>
            <value>
                <fullName>bevz_production</fullName>
            </value>
            <value>
                <fullName>birdcall</fullName>
            </value>
            <value>
                <fullName>bjs</fullName>
            </value>
            <value>
                <fullName>bottlecapps_production</fullName>
            </value>
            <value>
                <fullName>Breakaway Vision</fullName>
            </value>
            <value>
                <fullName>Brink</fullName>
            </value>
            <value>
                <fullName>brinker</fullName>
            </value>
            <value>
                <fullName>brinker_itsjustwings</fullName>
            </value>
            <value>
                <fullName>brinker_itsjustwings_v2</fullName>
            </value>
            <value>
                <fullName>brinker_production</fullName>
            </value>
            <value>
                <fullName>burger_king_jpn</fullName>
            </value>
            <value>
                <fullName>buyrite_asi_production</fullName>
            </value>
            <value>
                <fullName>cake_prod</fullName>
            </value>
            <value>
                <fullName>cardenas_markets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>